--- a/Web.Statu/Views/Account/ConfirmEmail.cshtml
+++ b/Web.Statu/Views/Account/ConfirmEmail.cshtml
@@ -56,5 +56,5 @@ else
             </div>
         </div>
     }</p>
-    <p>Pokud si myslíte, že děláte vše správně, napište na <a href="mailto:info@hlidacstatu.cz">info@hlidacstatu.cz</a> a pokusíme se vám pomoci.</p>
+    <p>Pokud si myslíte, že děláte vše správně, napište na <a href="mailto:podpora@hlidacstatu.cz">podpora@hlidacstatu.cz</a> a pokusíme se vám pomoci.</p>
 }
