--- a/Web.Statu/Views/Account/InfoConfirmCode.cshtml
+++ b/Web.Statu/Views/Account/InfoConfirmCode.cshtml
@@ -11,7 +11,7 @@
 <div class="bs-callout bs-callout-warning">
     <h4>Žádný email nepřišel?</h4>
     <p>
-        Email je odeslán z adresy <b>info@hlidacstatu.cz</b>.
+        Email je odeslán z adresy <b>podpora@hlidacstatu.cz</b>.
         Může se stát, že email je doručen do složky "Spam", "Junk mail", "Nevyžádaná pošta" apod. Zkontrolujte i tyto složky.
     </p>
 </div>
