--- a/Web.Statu/Views/Insolvence/PristupOmezen.cshtml
+++ b/Web.Statu/Views/Insolvence/PristupOmezen.cshtml
@@ -54,7 +54,7 @@
             Přístup ke všem insolvencím bez omezení dáváme novinářům, datovým analytikům a dalším vybraným osobám s registrací na Hlídači.
             <br />
 
-            Pokud spadáte do některé z uvedených kategorií, napište nám žádost o přístup na <a href="mailto:info@hlidacstatu.cz">info@hlidacstatu.cz</a> z emailu, pod kterým jste zde registrováni.
+            Pokud spadáte do některé z uvedených kategorií, napište nám žádost o přístup na <a href="mailto:podpora@hlidacstatu.cz">podpora@hlidacstatu.cz</a> z emailu, pod kterým jste zde registrováni.
             V mailu uveďte vaši <b>redakci</b> (novináři) nebo <b>firmu/účel</b> (datový analytik) a <b>váš telefon</b>, abychom vás mohli kontaktovat i telefonicky.
 
         </div>
