Improved event editation. Added some basic validation. Another cosmetic fixes,

--- a/Web.Statu/Views/Manage/EditPersonNP.cshtml
+++ b/Web.Statu/Views/Manage/EditPersonNP.cshtml
@@ -90,6 +90,7 @@
 
 <div>
     @Html.ActionLink("Back to List", "FindPerson")
+    @Html.ActionLink("Go to detail", "PersonDetail", new { id = Model.InternalId })
 </div>
 
 @section Scripts {
