Extended db model OsobaEvent.AddInfo => OsobaEvent.PolitickaStrana

--- a/Web.Statu/Views/Home/Reports/18_Hejtmani2018.cshtml
+++ b/Web.Statu/Views/Home/Reports/18_Hejtmani2018.cshtml
@@ -53,7 +53,7 @@
                         }
                         else
                         {
-                            return oe.AddInfo;
+                            return oe.PolitickaStrana;
                         }
                     },
                     OrderValueRender = (s) => {
@@ -68,7 +68,7 @@
                         }
                         else
                         {
-                            return oe.AddInfo;
+                            return oe.PolitickaStrana;
                         }
 
                     }
