--- a/Web.Statu/Views/Home/Reports/16_Poslanci2017.cshtml
+++ b/Web.Statu/Views/Home/Reports/16_Poslanci2017.cshtml
@@ -69,7 +69,7 @@
                 }
                 else
                 {
-                    return oe.AddInfo;
+                    return oe.PolitickaStrana;
                 }
             },
             OrderValueRender = (s) => {
@@ -84,7 +84,7 @@
                 }
                 else
                 {
-                    return oe.AddInfo;
+                    return oe.PolitickaStrana;
                 }
 
             }
