--- a/Web.Statu/Views/Home/_SearchFormHelpContent.cshtml
+++ b/Web.Statu/Views/Home/_SearchFormHelpContent.cshtml
@@ -119,6 +119,11 @@
                         <kbd>jmenoPrijemce:abcd1234</kbd> - hledat podle jména (či části jména) dodavatele<br />
                         <kbd>jmenoPlatce:abcd1234</kbd> - hledat podle jména (či části jména) zadavatele/úřadu<br />
                         <br />
+                        <kbd>holding:12345678</kbd> - IČO matky holdingu, hledá se pro všechny firmy holdingu, bez ohledu na které smluvní straně je<br />
+                        <kbd>holdingPrijemce:12345678</kbd> - IČO matky holdingu, hledá se pro všechny firmy holdingu, na straně dodavatele<br />
+                        <kbd>holdingPlatce:12345678</kbd> - IČO matky holdingu, hledá se pro všechny firmy holdingu, na straně zadavatele<br />
+
+                        <br />
                         <kbd>cena:castka</kbd> - smlouvy s cenou s DPH (námi vypočítaná cena)<br />
                         <kbd>cena:&gt;castka</kbd> - smlouvy s cenou vyšší než. Možno použí i <kbd>&gt;=</kbd> <kbd>&lt;=</kbd> <kbd>&lt;</kbd><br />
                         <kbd>cenasDPH:castka</kbd> - smlouvy s uvedenou hodnotou <br />
