some more fixes

--- a/Web.Statu/Views/Home/_SearchFormHelpContent.cshtml
+++ b/Web.Statu/Views/Home/_SearchFormHelpContent.cshtml
@@ -175,11 +175,13 @@
                 <dl>
                     <dd>
                         <kbd>ico:12345678</kbd> - jedna ze smluvních stran má uvedené IČO<br />
-                        <kbd>holding:12345678</kbd> - IČO matky holdingu, hledá se pro všechny firmy holdingu<br />
                         <kbd>icododavatel:12345678</kbd> - dodavatel uvedené IČO<br />
                         <kbd>icozadavatel:12345678</kbd> - zadavatel/úřad uvedené IČO<br />
                         <kbd>jmenododavatel:abcd1234</kbd> - hledat podle jména (či části jména) dodavatele<br />
                         <kbd>jmenozadavatel:abcd1234</kbd> - hledat podle jména (či části jména) zadavatele/úřadu<br />
+                        <br />
+                        <kbd>holdingdodavatel:12345678</kbd> - IČO matky holdingu, hledá se pro všechny firmy holdingu na straně dodavatele<br />
+                        <kbd>holdingzadavatel:12345678</kbd> - IČO matky holdingu, hledá se pro všechny firmy holdingu na straně zadavatele<br />
                         <br />
                         <kbd>oblast:jmenoOblasti</kbd> - oblast ve které veřejná zakázka je.<br />
                         <div style="margin-left:60px">
