--- a/Web.Statu/Views/Manage/PersonDetail.cshtml
+++ b/Web.Statu/Views/Manage/PersonDetail.cshtml
@@ -18,21 +18,21 @@
     <hr />
     <dl class="dl-horizontal">
         <dt>@Html.DisplayNameFor(model => model.TitulPred)</dt>
-        <dd>@Html.DisplayFor(model => model.TitulPred)</dd>
+        <dd>@Model.TitulPred</dd>
         <dt>@Html.DisplayNameFor(model => model.Jmeno)</dt>
-        <dd>@Html.DisplayFor(model => model.Jmeno)</dd>
+        <dd>@Model.Jmeno</dd>
         <dt>@Html.DisplayNameFor(model => model.Prijmeni)</dt>
-        <dd>@Html.DisplayFor(model => model.Prijmeni)</dd>
+        <dd>@Model.Prijmeni</dd>
         <dt>@Html.DisplayNameFor(model => model.TitulPo)</dt>
-        <dd>@Html.DisplayFor(model => model.TitulPo)</dd>
+        <dd>@Model.TitulPo</dd>
         <dt>@Html.DisplayNameFor(model => model.Narozeni)</dt>
-        <dd>@Html.DisplayFor(model => model.Narozeni)</dd>
+        <dd>@(Model.Narozeni?.ToString("dd.MM.yyyy") ?? " ??? ")</dd>
         <dt>@Html.DisplayNameFor(model => model.Umrti)</dt>
-        <dd>@Html.DisplayFor(model => model.Umrti)</dd>
+        <dd>@(Model.Umrti?.ToString("dd.MM.yyyy") ?? " ??? ")</dd>
         <dt>@Html.DisplayNameFor(model => model.Status)</dt>
-        <dd>@Html.DisplayFor(model => model.Status)</dd>
+        <dd>@(((HlidacStatu.Lib.Data.Osoba.StatusOsobyEnum)Model.Status).ToNiceDisplayName())</dd>
         <dt>@Html.DisplayNameFor(model => model.LastUpdate)</dt>
-        <dd>@Html.DisplayFor(model => model.LastUpdate)</dd>
+        <dd>@Model.LastUpdate</dd>
     </dl>
     <p>
         @Html.ActionLink("Editovat osobu", "EditPersonNP", new { id = Model.InternalId }, new { @class = "btn btn-primary btn-primary-new" })
@@ -41,7 +41,22 @@
 <div class="col-xs-12">
     <h4>Události</h4>
     <hr />
-    @Html.ActionLink("Přidat událost", "CreatePersonEvent")
+    <button type="button"
+            class="btn btn-primary"
+            data-toggle="modal"
+            data-target="#eventModal"
+            data-personid="@Model.InternalId"
+            data-eventid=""
+            data-datumod=""
+            data-datumdo=""
+            data-titulek=""
+            data-polstr=""
+            data-castka=""
+            data-typ=""
+            data-zdroj=""
+            data-action="create">
+        Přidat event
+    </button>
     @if (Model.Events().Count() > 0)
     {
         <table class="table">
@@ -77,7 +92,7 @@
                             @Html.DisplayFor(modelItem => udalost.AddInfoNum)
                         </td>
                         <td>
-                            @(((HlidacStatu.Lib.Data.OsobaEvent.Types)udalost.Type).ToNiceDisplayName())
+                            @Html.DisplayFor(modelItem => udalost.TypeName)
                         </td>
                         <td>
                             @Html.DisplayFor(modelItem => udalost.Zdroj)
@@ -87,14 +102,16 @@
                                     class="btn btn-primary"
                                     data-toggle="modal"
                                     data-target="#eventModal"
+                                    data-personid="@Model.InternalId"
                                     data-eventid="@udalost.pk"
-                                    data-datumod="@(udalost.DatumOd?.ToString("yyyy-MM-dd"))"
-                                    data-datumdo="@(udalost.DatumDo?.ToString("yyyy-MM-dd"))"
+                                    data-datumod="@(udalost.DatumOd?.ToString("dd.MM.yyyy"))"
+                                    data-datumdo="@(udalost.DatumDo?.ToString("dd.MM.yyyy"))"
                                     data-titulek="@udalost.Title"
                                     data-polstr="@udalost.PolitickaStrana"
                                     data-castka="@(udalost.AddInfoNum?.ToString("0"))"
                                     data-typ="@udalost.Type"
-                                    data-zdroj="@udalost.Zdroj">
+                                    data-zdroj="@udalost.Zdroj"
+                                    data-action="edit">
                                 Editovat
                             </button>
                         </td>
@@ -105,12 +122,12 @@
     }
 </div>
 <p>
-    
+
     @Html.ActionLink("Back to List", "FindPerson")
 </p>
 
 
-<!-- MODAL WINDOW HÝR -->
+<!-- ------------------------------MODAL WINDOW------------------------------ -->
 <!-- Modal -->
 <div class="modal fade" id="eventModal" tabindex="-1" role="dialog" aria-labelledby="eventModalLabel" aria-hidden="true">
     <div class="modal-dialog" role="document">
@@ -124,14 +141,15 @@
             <div class="modal-body">
                 <form>
                     <input type="hidden" id="eventId" value="0" />
+                    <input type="hidden" id="personId" value="0" />
                     <div class="form-group">
-                        <label for="recipient-name" class="col-form-label">Datum od:</label>
-                        <input type="date" class="form-control" id="datumOd">
+                        <label for="recipient-name" class="col-form-label text-box single-line">Datum od:</label>
+                        <input type="datetime" class="form-control" id="datumOd">
                         <span class="field-validation-valid text-danger" data-valmsg-for="DatumOd" data-valmsg-replace="true"></span>
                     </div>
                     <div class="form-group">
-                        <label for="recipient-name" class="col-form-label">Datum do:</label>
-                        <input type="date" class="form-control" id="datumDo">
+                        <label for="recipient-name" class="col-form-label text-box single-line">Datum do:</label>
+                        <input type="datetime" class="form-control" id="datumDo">
                         <span class="field-validation-valid text-danger" data-valmsg-for="DatumDo" data-valmsg-replace="true"></span>
                     </div>
                     <div class="form-group">
@@ -171,7 +189,7 @@
             </div>
             <div class="modal-footer">
                 <button type="button" class="btn btn-secondary" data-dismiss="modal">Zrušit</button>
-                <button type="button" onclick="sendEvent();" class="btn btn-primary">Uložit</button>
+                <button type="button" class="btn btn-primary" id="sendButton">Uložit</button>
             </div>
         </div>
     </div>
@@ -180,10 +198,11 @@
 <script>
     $('#eventModal').on('show.bs.modal', function (event) {
         // clear previous error messages
-        document.querySelectorAll("#eventModal .modal-body .field-validation-valid").forEach(item => item.innerText = "");
+        clearErrorMessages();
 
         // load data
         var button = $(event.relatedTarget) // Button that triggered the modal
+        var personId = button.data('personid') // Extract info from data-* attributes
         var eventId = button.data('eventid') // Extract info from data-* attributes
         var datumOd = button.data('datumod')
         var datumDo = button.data('datumdo')
@@ -195,7 +214,16 @@
 
         // set modal window
         var modal = $(this)
+        if (button.data('action') === 'create') {
+            modal.find('#eventModalLabel').text("Vytvořit novou událost");
+            modal.find('#sendButton').off("click").on("click", function () { createEvent() });
+        }
+        else {
+            modal.find('#eventModalLabel').text("Editovat událost");
+            modal.find('#sendButton').off("click").on("click", function () { editEvent() });
+        }
         modal.find('#eventId').val(eventId)
+        modal.find('#personId').val(personId)
         modal.find('#datumOd').val(datumOd)
         modal.find('#datumDo').val(datumDo)
         modal.find('#titulek').val(titulek)
@@ -205,7 +233,7 @@
         modal.find('#zdroj').val(zdroj)
     })
 
-    function sendEvent() {
+    function editEvent() {
         var osobaEvent = {
             "pk": document.getElementById("eventId").value,
             "Title": document.getElementById("titulek").value,
@@ -214,9 +242,10 @@
             "DatumOd": document.getElementById("datumOd").value,
             "DatumDo": document.getElementById("datumDo").value,
             "Type": document.getElementById("typ").value,
-            "Zdroj": document.getElementById("zdroj").value,
+            "Zdroj": document.getElementById("zdroj").value
 
         }
+        clearErrorMessages();
         $.post("/manage/updateEvent", osobaEvent)
             .done(function (data) {
                 window.location.reload();
@@ -226,13 +255,39 @@
 
                 // something like $('input[name="' + err.key + '"]')
             });
-
     }
+
+    function createEvent() {
+        var osobaEvent = {
+            "OsobaId": document.getElementById("personId").value,
+            "Title": document.getElementById("titulek").value,
+            "PolitickaStrana": document.getElementById("polstr").value,
+            "AddInfoNum": document.getElementById("castka").value,
+            "DatumOd": document.getElementById("datumOd").value,
+            "DatumDo": document.getElementById("datumDo").value,
+            "Type": document.getElementById("typ").value,
+            "Zdroj": document.getElementById("zdroj").value
+
+        }
+        clearErrorMessages();
+        $.post("/manage/createEvent", osobaEvent)
+            .done(function (data) {
+                window.location.reload();
+            })
+            .fail(function (data) {
+                displayValidationErrors(data.responseJSON);
+            });
+    }
+
 
     function displayValidationErrors(errors) {
         for (var i = 0; i < errors.length; i++) {
             $('span[data-valmsg-for="' + errors[i].key + '"]').text(errors[i].errors[0]);
         }
+    }
+
+    function clearErrorMessages() {
+        document.querySelectorAll("#eventModal .modal-body .field-validation-valid").forEach(item => item.innerText = "");
     }
 
 </script>
